en-us/3.0/readme.md
# FastD Chinese document

Framework integrates some of the more efficient use of tools to improve development efficiency, do not have to worry about the framework will not be dependent on more things caused by the slowdown in the process, only the use of the file code operating.

Framework execution mode:

Normal mode
Command line mode
Swoole mode

Targeted at different modes, loading objects are not the same, so for different execution environments, there will be different operational processes to speed up the scheduling efficiency of the framework.

### modify the log

* [Change Log] (en-us / 3.0 / change-log.md)

### Installation and Configuration

* [About FastD] (en-us / 3.0 / 1-1-about-fastd.md)
* [Install FastD] (en-us / 3.0 / 1-2-installing.md)
* [Directory Structure] (en-us / 3.0 / 1-3-directory-structure.md)


### Basics

* [Routing and Controllers] (en-us / 3.0 / 2-1-routing-and-controllers.md)
* [Request Processing] (en-us / 3.0 / 2-2-request-handling.md)
* [Response Processing] (en-us / 3.0 / 2-3-response-handling.md)
* [Authentication] (en-us / 3.0 / 2-4-authorization.md)
* [Exceptions and Log Processing] (en-us / 3.0 / 2-5-exception-logger-handling.md)
* [API Documentation] (en-us / 3.0 / 2-6-docuemnt.md)

### Advanced

* [Configuration] (en-us / 3.0 / 3-1-configuration.md)
* [Middleware] (en-us / 3.0 / 3-2-middleware.md)
* [Database medoo] (en-us / 3.0 / 3-3-database.md)
* [Cache] (en-us / 3.0 / 3-4-cache.md)
* [Command Line] (en-us / 3.0 / 3-5-console.md)
* [Unit Testing] (en-us / 3.0 / 3-6-testcase.md)
* [Accessibility] (en-us / 3.0 / 3-7-helpers.md)
* [Service Providers] (en-us / 3.0 / 3-8-service-provider.md)
* [Swoole Server] (en-us / 3.0 / 3-9-swoole-server.md)
* [Extensions] (en-us / 3.0 / 3-10-extend.md)


### schema

* [Life Cycle] (en-us / 3.0 / 4-1-lifecycle.md)
* [RPC Services] (en-us / 3.0 / 4-2-microservice.md)

### Support

If you encounter problems in use, please contact: [bboyjanhuang@gmail.com] (mailto: bboyjanhuang@gmail.com). Weibo: [code Xia] (http://weibo.com/ecbboyjan)

## License MIT