en-us/3.1/readme.md
<h1 align = "center"> FastD Chinese Documentation </ h1>

<p align = "center">: rocket: A high performance PHP API framework. </ p>

<p align = "center">
<a href="https://travis-ci.org/JanHuang/fastD"> <img src = "https://travis-ci.org/JanHuang/fastD.svg?branch=master" /> </ a >
<a href="https://scrutinizer-ci.com/g/JanHuang/fastD/?branch=master"> <img src = "https://scrutinizer-ci.com/g/JanHuang/fastD/badges/ quality-score.png? b = master "title =" Scrutinizer Code Quality "> </a>
<a href="https://scrutinizer-ci.com/g/JanHuang/fastD/?branch=master"> <img src = "https://scrutinizer-ci.com/g/JanHuang/fastD/badges/ coverage.png? b = master "alt =" Code Coverage "> </a>
<a href="https://styleci.io/repos/35930132"> <img src = "https://styleci.io/repos/35930132/shield?branch=3.1" alt = "StyleCI"> </ a >
<a href="https://fastdlabs.com/"> <img src = "https://poser.pugx.org/fastd/fastd/v/stable" /> </a>
<a href="http://www.php.net/"> <img src = "https://img.shields.io/badge/php-%3E%3D5.6-8892BF.svg" /> < / a>
<a href="http://www.swoole.com/"> <img src = "https://img.shields.io/badge/swoole-%3E%3D1.9.6-8892BF.svg" /> < / a>
<a href="https://fastdlabs.com/"> <img src = "https://poser.pugx.org/fastd/fastd/license" /> </a>
</ p>

Framework integrates some of the more efficient use of tools to improve development efficiency, do not have to worry about the framework will not be dependent on more things caused by the slowdown in the process, only the use of the file code operating.

Framework execution mode:

Normal mode
Command line mode
Swoole mode

Targeted at different modes, loading objects are not the same, so for different execution environments, there will be different operational processes to speed up the scheduling efficiency of the framework.

### modify the log

- [Change Log] (en-us / 3.1 / change-log.md)
- [Upgrade Guide] (en-us / 3.1 / upgrade.md)

### Installation and Configuration

- [About FastD] (en-us / 3.1 / 1-1-about-fastd.md)
- [Install FastD] (en-us / 3.1 / 1-2-installing.md)
- [Directory Structure] (en-us / 3.1 / 1-3-directory-structure.md)
- [Framework Execution Flowchart] (en-us / 3.1 / 1-4-flow.md)

### Basics

- [Routing and Controllers] (en-us / 3.1 / 2-1-routing-and-controllers.md)
- [Request Processing] (en-us / 3.1 / 2-2-request-handling.md)
- [Response Processing] (en-us / 3.1 / 2-3-response-handling.md)
- [Authentication and Authorization] (en-us / 3.1 / 2-4-authorization.md)
- [Exceptions and Log Processing] (en-us / 3.1 / 2-5-exception-logger-handling.md)
- [] ~~ [API Documentation] (en-us / 3.1 / 2-6-docuemnt.md) ~~

### Advanced

- [Configuration] (en-us / 3.1 / 3-1-configuration.md)
- [middleware] (en-us / 3.1 / 3-2-middleware.md)
- [database medoo] (en-us / 3.1 / 3-3-database.md)
- [cache] (en-us / 3.1 / 3-4-cache.md)
- [Command Line] (en-us / 3.1 / 3-5-console.md)
- [Unit Test] (en-us / 3.1 / 3-6-testcase.md)
- [Accessibility] (en-us / 3.1 / 3-7-helpers.md)
- [Service Provider] (en-us / 3.1 / 3-8-service-provider.md)
- [Swoole Server] (en-us / 3.1 / 3-9-swoole-server.md)
- [Connection Pool] (en-us / 3.1 / 3-10-connection-pool.md)
- [Extensions] (en-us / 3.1 / 3-11-extend.md)

### schema

- [Life Cycle] (en-us / 3.1 / 4-1-lifecycle.md)
- [] ~~ [RPC Services] (en-us / 3.1 / 4-2-microservice.md) ~~
- [] [FastD and LogStash] (en-us / 3.1 / 4-3-fastd-logstash.md) (Not open)
- [] [FastD & QConf] (en-us / 3.1 / 4-4-fastd-qconf.md) (Not open)
- [] [FastD and LogViewer] (en-us / 3.1 / 4-5-fastd-log-viewer.md) (Not open)

### Support

If you encounter problems in use, please contact: [bboyjanhuang@gmail.com] (mailto: bboyjanhuang@gmail.com). Weibo: [code Xia] (http://weibo.com/ecbboyjan)

## License MIT